kubernetes_utilities/cockroachdb_loadgen_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgen
  template:
    metadata:
      labels:
        app: loadgen
    spec:
      containers:
      - name: loadgen
        image: cockroachdb/loadgen-kv:0.1
        imagePullPolicy: IfNotPresent
        command:
          - "/kv"
          - "postgres://root@cockroachdb-public:26257/kv?sslmode=disable"
